[package]
name = "rust_pyramid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"     # Optimize for size.
lto = "fat"         # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "symbols"   # Strip symbols from binary

[dependencies]
zip-extract = "0.1.1"
reqwest = "0.11.6"

tokio = { version = "1.10.0", features = ["full"] }

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]
name = "rpyramid"